--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,37 @@
+.user-image {
+  max-width: 60px;
+  max-height: 60px;
+}
+
+.thumbnail {
+  text-align: center;
+  width: 250px;
+  height: 100%;
+  padding: 2rem 1rem;
+  float: left;
+}
+
+.toolbar {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+
+  .btn {
+    margin-right: 1rem;
+  }
+}
+
+.user-list {
+  border: 1px solid #ddd;
+  tbody tr {
+    cursor: pointer;
+    transition: background-color 100ms;
+
+    &:hover {
+      background-color: #eee;
+    }
+  }
+}
+
 .rc-intro {
   background-color: #222;
   padding: 2rem;
@@ -6,7 +40,9 @@
 }
 
 .rc-img {
+  display: inline-block;
   max-width: 50px;
+  margin: 0;
 }
 
 .rc-title {
